--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
       <section>
         <div id="title">
-          <h1>Pilobond.GitHub.io</h1>
-          <p></p>
+          <h1>Welcome to Pil's page!</h1>
+          <p>Test test test</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/pilobond">pilobond</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
